frontend/src/App.css
/* ... */
.messagemasterwrapper {
  /* display: flex;
  flex-direction: column;
  justify-content: end; */
  /* display: grid;
  grid-template-rows: 1fr;
  align-items: end; */
  width: 100%;
  height: 83%;
  overflow-y: scroll;
}

.topbuttons {
  /* margin-left: 80%; */
  display: flex;
  gap: 30px;
}

.messagewrapper {
  width: 100%;
}

/* .daywrapper {
  display: flex;
  justify-content: center;
  align-items: center;
} */

.border {
  border-top: 1px solid black;
  border-bottom: 1px solid black;
  width: 100%;
  text-align: center;
}

.grid {
  width: 80%;
  height: 50%;
  display: grid;
  grid-template-columns: repeat(auto-fit, 200px);
  padding: 30px;
  grid-gap: 10px;
  overflow-y: scroll;
}

.useravatarwrapper {
  max-width: 300px;
}

svg {
  cursor: pointer;
}

.message {
  display: flex;
  gap: 10px;
  margin: 10px;
  padding: 0 20px;
  justify-content: start;
  align-items: center;
}

#image,
#background,
#avatar {
  display: none;
}

.imgcontainer {
  height: 100vh;
  width: min(80vw, calc(95vw - 320px));
  display: flex;
  justify-content: center;
  align-items: center;
  /* background-image: url("https://images.unsplash.com/photo-1548620848-d375c7919ea2?q=80&w=2669&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
  background-size: cover; */
}

.message.right {
  justify-content: end;
}

.azure {
  background-color: azure;
  border: 1px solid azure;
  border-radius: 15%;
  padding: 10px 20px;
  max-width: 50vw;
}

.imgmessage {
  padding: 10px 20px;
}

.imgmessage img {
  max-width: 50vw;
  max-height: 50vh;
  object-fit: cover;
}

.smallgap {
  display: flex;
  gap: 20px;
  padding-right: 1vw;
}

.mobile {
  display: none;
}

.profbuttons {
  display: flex;
  justify-content: space-between;
}

.chatinfo {
  /* position: absolute;
  top: 25%;
  left: 25%; */
  grid-area: 1 / 3 / 1 / 4;
  display: flex;
  flex-direction: column;
  align-items: left;
  justify-content: left;
}

.closeprof {
  position: absolute;
  right: 40px;
  top: 10px;
  z-index: 2;
  width: 30px;
  height: 30px;
  /* background-image: url("https://plus.unsplash.com/premium_photo-1723587567569-0545a68c6b54?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"); */
}

.avatar {
  min-width: 70px;
  min-height: 70px;
  border-radius: 50%;
  border: 3px solid black;
  background-color: white;
  /* background-image: url("https://steamuserimages-a.akamaihd.net/ugc/2492254803012160630/33FDDE88D49A58AF9C263ED4354B43193F50903A/?imw=512&&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false"); */
  background-size: cover;
  background-repeat: no-repeat;
  cursor: pointer;
}

.form input {
  height: 30px;
  width: 300px;
}

.whiteborder {
  border-color: white;
}

.login {
  width: 100vw;
  height: 100vh;
  font-size: 20px;
  gap: 10px;
  background-color: white;
  color: black;
}

.login h1 {
  z-index: 2;
  text-align: center;
}

.form,
.login {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-bottom: 10px;
  gap: 5px;
}

.bigavatar {
  width: 150px;
  height: 150px;
}

.chatavatar {
  /* position: absolute;
  top: 5%;
  left: 5%; */
  grid-area: 1 / 2 / 1 / 3;
}

.bottomsection {
  width: 100%;
  height: 7%;
  border: 1px solid black;
  display: flex;
  align-items: center;
  justify-content: center;
}

.favicon {
  /* position: absolute;
  left: 95%;
  top: 40%; */
  grid-area: 1 / 5 / 1 / 6;
}

.date {
}

.ngright {
  display: none;
  /* position: absolute;
  left: 16vw;
  top: 2vh; */
}

@media only screen and (max-width: 2100px) {
  .mid .avatar {
    min-width: 60px;
    min-height: 60px;
  }
  .bigavatar.avatar {
    width: 100px;
    height: 100px;
  }
}

@media only screen and (max-width: 1000px) {
  .whiteborder.avatar {
    min-width: 40px;
    min-height: 40px;
  }
  .cat {
    width: 300px;
    height: 300px;
  }
  .xmargin {
    max-height: 50vh;
  }
  .xmargin p {
    height: 30vh;
    width: 80%;
  }
  .bigavatar.avatar {
    width: 75px;
    height: 75px;
  }
  .profilebackground {
    min-height: 40vh;
  }
  .chatdeletediv,
  .messagedeletediv {
    position: absolute;
    left: 10%;
    top: 40%;
    padding: 30px;
    border: 3px solid gold;
    z-index: 2;
    height: 20vh;
    width: 80%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    background-color: black;
    color: white;
  }
  .messagedeletediv {
    gap: 30px;
  }
  .chatdeletediv {
    gap: 20px;
  }
  .chatdeletediv button {
    height: 50px;
    width: 70px;
    font-weight: bold;
    font-size: 15px;
  }
  .yes {
    background-color: green;
    color: white;
    font-weight: bold;
  }
  .no {
    background-color: red;
    color: white;
    font-weight: bold;
  }
  .mobile {
    display: block !important;
  }
  .nonmobile {
    display: none;
  }
  /* .biobutton {
    width: 70px;
    height: 70px;
    display: flex;
    justify-content: center;
    align-items: center;
  } */
  h2 {
    font-size: 20px;
  }
  .smallgap {
    gap: 10px;
    margin: 0 10px;
  }
  .avatar {
    min-width: 50px;
    min-height: 50px;
  }
  .imgcontainer img {
    max-width: 300px;
    max-height: 300px;
  }
  .profbuttons {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
  }

  .biobutton,
  .changepass {
    margin: 0;
  }
}
/* ... */

